--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                  <tbody id="info-body">
                  </tbody>
-                 
+
               </table>
 
         </div>
@@ -65,7 +65,7 @@
             <h3 class="panel-title">Add Train</h3>
           </div>
           <div class="panel-body">
-            <form>
+            <form id="add-new-train">
               <div class="form-group">
                 <label for="train">Train Name</label>
                 <input class="form-control user-input" id="train-input" type="text">
