--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Bootstrap CDN-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/style.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
   <!-- Firebase Reference -->
   <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
@@ -65,7 +65,7 @@
             <h3 class="panel-title">Add Train</h3>
           </div>
           <div class="panel-body">
-            <form id="add-new-train">
+            <form>
               <div class="form-group">
                 <label for="train">Train Name</label>
                 <input class="form-control user-input" id="train-input" type="text">
